[project]
name = "nd-mock"
version = "0.1.0"
description = "Simulate Nexus Dashboard RestAPI interactions"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "fastmcp>=3.2.4",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sqlmodel>=0.0.22",
    "uv>=0.10.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "mypy>=1.11.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.black]
line-length = 180

[tool.flake8]
# E123, E125 skipped as they are invalid PEP-8.
show-source = true
ignore = "E123,E125,E203,E402,E501,E741,F401,F811,F841,W503"
max-line-length = 180

[tool.isort]
ensure_newline_before_comments = true
extend_skip = [".md", ".json", ".yaml", ".txt"]
force_grid_wrap = false
line_length = 180
multi_line_output = 7
skip_glob = ["docs/*"]
use_parentheses = false

[tool.mypy]
disable_error_code = "assignment,import,import-not-found"

[tool.pyink]
line-length = 180

[tool.pylint."messages control"]
disable = ["duplicate-code", "fixme", "invalid-name", "import-error", "missing-module-docstring", "too-few-public-methods", "too-many-instance-attributes", "too-many-lines", "too-many-public-methods", "too-many-statements"]

[tool.pylint.format]
max-line-length = 180

[tool.ruff.lint]
ignore = ["F401"]
